plugins {
    id 'java'
    id 'application'
    id 'org.springframework.boot' version '3.2.1'  // 최신 Spring Boot 버전
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.sprint.mission'
version = '1.0-SNAPSHOT'

application {
    mainClass = 'com.sprint.mission.discodeit.DiscodeitApplication'
}

repositories {
    mavenCentral()
}

dependencies {
    // ✅ Spring Boot Core Dependencies
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'  // Spring Data JPA
    implementation 'org.springframework.boot:spring-boot-starter-validation'  // Validation starter
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.14.2'
    // ✅ Lombok (컴파일 및 애너테이션 프로세서 설정)
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    dependencies {
        // Swagger/OpenAPI 의존성 추가 (springdoc-openapi)
        implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
        implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
    }

    implementation 'jakarta.servlet:jakarta.servlet-api:5.0.0'
    // H2 Database (Optional, used for testing)
    runtimeOnly 'com.h2database:h2'

    // ✅ Spring Boot Test (JUnit 5 지원)
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

java {
    // ✅ JDK 17 또는 JDK 21을 지원하도록 설정
    sourceCompatibility = JavaVersion.VERSION_21 // JDK 17 버전 사용
    targetCompatibility = JavaVersion.VERSION_21 // JDK 17 버전 사용
}

tasks.withType(JavaExec).configureEach {
    jvmArgs '-Dfile.encoding=UTF-8'
}

test {
    useJUnitPlatform()
}
